--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <div id="nav-menu">
                     <ul>
-                        <li><a href="#"></a></li>
+                        <li><a href="https://www.nps.gov/planyourvisit/index.htm">More Resource</a></li>
                     </ul>
                 </div>
             </nav>
