added html header and css header styling

--- a/index.html
+++ b/index.html
@@ -13,23 +13,14 @@
 </head>
 
 <body>
-    <header>
-        <div id="upper-header">
-            <h1 class="name-tag">
-                National Park Finder
-            </h1>
-            <nav>
-                <div id="nav-menu">
-                    <ul>
-                        <li><a href="https://www.nps.gov/planyourvisit/index.htm">More Resource</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <div id="header-img">
-            <img src="" alt="header image">
-        </div>
-    </header>
+<div class="hero">
+    <div class="container">
+        <h1><span>xplor</span></h1>
+        <span class="title">National Park Finder</span>
+        <a class="resources" href="https://www.nps.gov/planyourvisit/index.htm">Resources</a>
+    </div>
+</div>
+
     <main>
         <div id="tagline"></div>
         <div id="search-bar">
