--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <div id="tagline"></div>
-        <div id="park-search" class="input-field col s6">
+        <div id="state-search" class="input-field">
             <select id="state-name" class="browser-default">
               <option id=“blank” value=“” disabled selected>Click to select a state</option>
               <option id="AL" value="Alabama">Alabama</option>
