--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </form>
         </div>
         <div id="search-history"></div>
-        <div id="map"></div>
+        <div id="map" style="width: 300px; height: 300px;"></div>
     </main>
     <main>
         <div id="park-name"></div>
@@ -40,8 +40,10 @@
         <div id="thingstodo"></div>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/us-map/1.0.1/jquery.usmap.min.js" integrity="sha512-84K7p/J13bQ9cZo5jQ0XtGHfq8csnRl3gb19glfw+ZGuCTFcspY7OVuywjuYSI9NBGsbdyPaVUW1opr+FhR+nw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
