--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div id="search-history"></div>
-        <div id="map" style="height: 500px; width: 60%; margin: auto;"></div>
+        <div id="map" style="height: 1000px; width: 1000px; margin: auto;"></div>
     </main>
     <main>
         <div id="park-name"></div>
