few fixes to weather api and div

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <main>
-        <div id="tagline"></div
+        <div id="tagline"></div>
 
         <div id="search-history"></div>
         <div id="map" style="height: 1000px; width: 1000px; margin: auto;"></div>
