added 5 day forecast

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <div id="tagline">
-            <h1>Add a cute tagline</h1>
+            <h1>Cute tagline</h1>
         </div>
 
 
