began formatting tagline

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="hero">
+    <div class="hero" class="mb-5">
         <div class="container">
             <h1><span>xplor</span></h1>
             <span class="title">National Park Finder</span>
@@ -22,12 +22,13 @@
     </div>
 
     <main>
-        <div id="tagline">
-            <h1>Cute tagline</h1>
+        <div id="tagline" class ="box column is-2 ml-5 mt-6 has-text-centered" >
+            <h1 class="content is-large">Cute tagline</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit facilis, adipisci est corrupti sit ipsum veniam commodi quia quibusdam, sint, fugiat totam quasi porro quis! Facilis iusto nemo minima voluptas!</p>
         </div>
 
 
-        <div id="map" style="height: 1000px; width: 1000px; margin: auto;"></div>
+        <div id="map" style="height: 1000px; width: 1400px"></div>
 
         <div id="search-history">
             <h3>Recent searches:</h3>
