basic forecast formatting

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
     </div>
 
-    <main>
+    <main class="flex-container">
         <div id="tagline" class ="box column is-2 ml-5 mt-6 has-text-centered" >
-            <h1 class="content is-large">Cute tagline</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit facilis, adipisci est corrupti sit ipsum veniam commodi quia quibusdam, sint, fugiat totam quasi porro quis! Facilis iusto nemo minima voluptas!</p>
+            <h1 class="content is-large">Select a State</h1>
+            <p>Click on a state to unlock details on it's most popular national park.</p>
         </div>
 
 
