added park name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </div>
 
 
-        <div id="map" style="height: 1000px; width: 1400px"></div>
+        <div id="map" style="height: 1000px; width: 1400px">
+            <a href="#forecast-container"></a></div>
 
         <div id="search-history">
             <h3>Recent searches:</h3>
