--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="flex-container">
         <div id="tagline" class ="box column is-2 ml-5 mt-6 has-text-centered" >
             <h1 class="content is-large">Select a State</h1>
-            <p>Click on a state to unlock details on it's most popular national park. Use the resources link above for help planning your trip.</p>
+            <p>Click on a state to unlock details on it's most popular national park.</p>
             <p>Use the resources link above for help planning your trip.</p>
         </div>
 
