--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </main>
     <main>
         <div id="park-name"></div>
-        <div id="forecast-container"></div>
-        <div id="parkinfo"></div>
-        <div id="thingstodo"></div>
+        <div id="forecast-container" class ="box column is-10 has-text-centered"></div>
+        <div id="parkinfo" class="box column is-5 mt-6"></div>
+        <div id="thingstodo" class="box column is-5"></div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
