--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 
 
         <div id="map" style="height: 1000px; width: 1400px">
-            <a href="#forecast-container"></a></div>
+        
 
         <div id="search-history">
-            <h3>Recent searches:</h3>
             <div id="recent-searches"></div>
         </div>
     </main>
     <main>
         <div id="park-name"></div>
-        <div id="forecast-container" class ="box column is-10 has-text-centered"></div>
-        <div id="parkinfo" class="box column is-5 mt-6"></div>
-        <div id="thingstodo" class="box column is-5"></div>
+        <div id="forecast-container" style="float:right" class ="box column is-7 has-text-centered"></div>
+        <div id="parkdata" style="float:left" class="box column is-5 has-text-centered"></div>
+        <div id="parkinfo" style="float:left" class="box column is-4"></div>
+        <div id="thingstodo" style="float:right" class="box column is-3"></div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
