--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="forecast-container" style="float:right" class ="box column is-7 has-text-centered"></div>
         <div id="parkdata" style="float:left" class="box column is-5 has-text-centered"></div>
         <div id="parkinfo" style="float:left" class="box column is-4"></div>
-        <div id="thingstodo" style="float:right" class="box column is-3"></div>
+        <div id="thingstodo" style="float:left" class="box column is-3"></div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
