--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
         </div>
     </main>
     <main>
-        <div id="park-name"></div>
-        <div id="forecast-container" style="float:right" class ="box column is-7 has-text-centered"></div>
+      
+        <div class="col-12 col-md-8 col-xl-9"> 
+        <div id="forecast-container" style="float:right" class ="tires column is-7 has-text-centered"></div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-9"> 
         <div id="parkdata" style="float:left" class="box column is-5 has-text-centered"></div>
         <div id="parkinfo" style="float:left" class="box column is-4"></div>
         <div id="thingstodo" style="float:left" class="box column is-3"></div>
+      </div> 
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
