linked sec team page to main

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h1><span>xplor</span></h1>
             <span class="title">National Park Finder</span>
             <a class="resources" href="https://www.nps.gov/planyourvisit/index.htm">Resources</a>
+            <a class="contributors" href="./contrib.html">Contributors</a>
         </div>
     </div>
 
