added P icon for portfolio and linked all portfolios for team members

--- a/contrib.html
+++ b/contrib.html
@@ -18,8 +18,9 @@
                 <div class="img-box">
                     <img src="./images/rob.JPG" width="250px" height="200px" class="img-responsive">
                     <ul>
-                   <a href="#"><li><i class="fa-brands fa-github"></i></li></a> 
+                   <a href="https://github.com/rarellano5280"><li><i class="fa-brands fa-github"></i></li></a> 
                    <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
+                   <a href="https://rarellano5280.github.io/Portfolio/"><li><i class="fa-solid fa-p"></i></li></a>
                     </ul>
                 </div>
                 <h2>Robert Arellano</h2>
@@ -29,8 +30,9 @@
                 <div class="img-box">
                     <img src="./images/madisen.jpeg" width="200px" class="img-responsive">
                      <ul>
-                    <a href="#"><li><i class="fa-brands fa-github"></i></li></a> 
+                    <a href="https://github.com/madisenvo"><li><i class="fa-brands fa-github"></i></li></a> 
                     <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
+                    <a href="https://madisenvo.github.io/Portfolio/"><li><i class="fa-solid fa-p"></i></li></a>
                      </ul>
                     </div>
                     <h2>Madisen Vogel</h2>
@@ -41,8 +43,9 @@
                         <div class="img-box">
                             <img src="./images/antonio.jpeg" width="200px" class="img-responsive">
                             <ul>
-                           <a href="#"><li><i class="fa-brands fa-github"></i></li></a> 
-                           <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
+                           <a href="https://github.com/antonio11duran"><li><i class="fa-brands fa-github"></i></li></a> 
+                           <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a>
+                           <a href="https://antonio11duran.github.io/Duran-Antonio-Portfolio/"><li><i class="fa-solid fa-p"></i></li></a>
                             </ul>
                         </div>
                         <h2>Antonio Duran</h2>
@@ -53,8 +56,9 @@
                             <div class="img-box">
                                 <img src="./images/eugene.jpeg" width="200px" class="img-responsive">
                                 <ul>
-                               <a href="#"><li><i class="fa-brands fa-github"></i></li></a> 
+                               <a href="https://github.com/eugeneisingizwe"><li><i class="fa-brands fa-github"></i></li></a> 
                                <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
+                               <a href="https://eugeneisingizwe.github.io/My-Portfolio/"><li><i class="fa-solid fa-p"></i></li></a>
                                 </ul>
                             </div>
                             <h2>Eugene Isingizwe</h2>
