--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" -->
+        <!-- href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="./assets/style.css" />
     <title>National Park Finder</title>
 </head>
@@ -22,7 +22,7 @@
     </div>
 
     <main class="flex-container">
-        <div id="tagline" class ="box column is-2 ml-5 mt-6 has-text-centered" >
+        <div id="tagline" class="box column is-2 ml-5 mt-6 has-text-centered">
             <h1 class="content is-large">Select a State</h1>
             <p>Click on a state to unlock details on it's most popular national park.</p>
             <p>Use the resources link above for help planning your trip.</p>
@@ -30,22 +30,21 @@
 
 
         <div id="map" style="height: 1000px; width: 1400px">
-        
 
-        <div id="search-history">
-            <div id="recent-searches"></div>
-        </div>
-    </main>
-    <main>
-      
-        <div class="col-12 col-md-8 col-xl-9"> 
-        <div id="forecast-container" style="float:right" class ="tires column is-7 has-text-centered"></div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-9"> 
-        <div id="parkdata" style="float:left" class="box column is-5 has-text-centered"></div>
-        <div id="parkinfo" style="float:left" class="box column is-4"></div>
-        <div id="thingstodo" style="float:left" class="box column is-3"></div>
-      </div> 
+
+            <div id="search-history">
+                <div id="recent-searches"></div>
+            </div>
+
+
+            <div class="col-12 col-md-8 col-xl-9">
+                <div id="forecast-container" style="float:right" class="tires column is-7 has-text-centered"></div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-9">
+                <div id="parkdata" style="float:left" class="box column is-5 has-text-centered"></div>
+                <div id="parkinfo" style="float:left" class="box column is-4"></div>
+                <div id="thingstodo" style="float:left" class="box column is-3"></div>
+            </div>
         </div>
     </main>
 
