some local storage tests

--- a/index.html
+++ b/index.html
@@ -32,9 +32,21 @@
             <!-- /* overflow: hidden; position: relative; top: 50%; left: 50%;"></div> */ -->
         </div>
 
-        <div id="search-history">
-            <div id="recent-searches"></div>
+        <div id="modal-js-example" class="modal">
+            <div class="modal-background"></div>
+
+            <div class="modal-content">
+                <div class="box">
+                    <!-- Your content -->
+                </div>
+            </div>
+
+            <button class="modal-close is-large" aria-label="close"></button>
         </div>
+
+        <button class="js-modal-trigger" data-target="modal-js-example">
+            Open JS example modal
+        </button>
 
         <div>
             <div id="forecast-container" style="float:right" class="box column is-7 has-text-centered"></div>
