formatting data boxes

--- a/index.html
+++ b/index.html
@@ -35,19 +35,18 @@
         <div id="search-history">
             <div id="recent-searches"></div>
         </div>
-    </main>
-    <main>
-    
-        <div> 
-            <div id="forecast-container" style="float:right" class ="box column is-7 has-text-centered"></div>
-        </div>
 
-        <div> 
-                <div id="parkdata" style="float:left" class="box column is-5 has-text-centered"></div>
-                <div id="parkinfo" style="float:left" class="box column is-4"></div>
-                <div id="thingstodo" style="float:left" class="box column is-3"></div>
-                <div id="contactinfo" style="float:left" class="box column is-3"></div>
-            </div> 
+        <div class="columns is-multiline is-mobile"> 
+
+            <div id="parkdata" style="float:left" class="column is-5 has-text-centered is-mobile"></div>
+
+            <div id="forecast-container" style="float:right" class ="column is-10 has-text-centered is-mobile"></div> 
+            <div class="columns is-mobile">
+                <div id="parkinfo" class="column is-one-third is-offset-1 is-mobile"></div>
+                <div id="thingstodo" class="column is-one-third is-offset-1 is-mobile"></div>
+                <div id="contactinfo" class="column is-one-third is-offset-1 is-mobile"></div>
+            </div>
+
         </div>
     </main>
 
