forecast and image formatted

--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
         <div class="columns is-multiline is-mobile"> 
 
-            <div id="parkdata" style="float:left" class="column is-5 has-text-centered is-mobile"></div>
+            <div id="parkdata" class="column is-5 has-text-centered is-mobile"></div>
 
-            <div id="forecast-container" style="float:right" class ="column is-10 has-text-centered is-mobile"></div> 
+            <div id="forecast-container" class ="column is-6 has-text-centered is-mobile"></div> 
+            
             <div class="columns is-mobile">
-                <div id="parkinfo" class="column is-one-third is-offset-1 is-mobile"></div>
-                <div id="thingstodo" class="column is-one-third is-offset-1 is-mobile"></div>
-                <div id="contactinfo" class="column is-one-third is-offset-1 is-mobile"></div>
+                <div id="parkinfo" class="column is-offset-1 is-mobile"></div>
+                <div id="thingstodo" class="column is-offset-1 is-mobile"></div>
+                <div id="contactinfo" class="column is-offset-1 is-mobile"></div>
             </div>
 
         </div>
