--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <main class="is-full-mobile">
+    <main class="is-full-mobile is-full-tablet">
 
         <div id="tagline" class="box column is-2 is-offset-5 has-text-centered mt-5">
             <h1 class="content is-large">Select a State</h1>
@@ -36,7 +36,7 @@
         <div id="data" class="hide">
             <div  class="columns is-multiline is-full-mobile"> 
 
-                <div id="parkdata" class="column is-4 is-offset-1 has-text-centered is-full-tablet is-full-mobile"></div>
+                <div id="parkdata" class="column is-4 is-offset-1 has-text-centered is-full-mobile"></div>
                 
                 <div>
                     <div id="forecast-container" class ="column is-12 has-text-centered is-offset-1"></div> 
