--- a/contrib.html
+++ b/contrib.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team</title>
-    <link rel="stylesheet" href="./contrib.css">
+    <link rel="stylesheet" href="./assets/contrib.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -17,7 +17,7 @@
             <div class="row">
             <div class="col-md-3 profile text-center">
                 <div class="img-box">
-                    <img src="./images/rob.JPG" width="250px" height="200px" class="img-responsive">
+                    <img src="./assets/images/rob.JPG" width="250px" height="200px" class="img-responsive">
                     <ul>
                    <a href="https://github.com/rarellano5280"><li><i class="fa-brands fa-github"></i></li></a> 
                    <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
@@ -29,7 +29,7 @@
                 </div>
             <div class="col-md-3 profile text-center">
                 <div class="img-box">
-                    <img src="./images/madisen.jpeg" width="200px" class="img-responsive">
+                    <img src="./assets/images/madisen.jpeg" width="200px" class="img-responsive">
                      <ul>
                     <a href="https://github.com/madisenvo"><li><i class="fa-brands fa-github"></i></li></a> 
                     <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
@@ -42,7 +42,7 @@
 
                     <div class="col-md-3 profile text-center">
                         <div class="img-box">
-                            <img src="./images/antonio.jpeg" width="200px" class="img-responsive">
+                            <img src="./assets/images/antonio.jpeg" width="200px" class="img-responsive">
                             <ul>
                            <a href="https://github.com/antonio11duran"><li><i class="fa-brands fa-github"></i></li></a> 
                            <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a>
@@ -55,7 +55,7 @@
 
                         <div class="col-md-3 profile text-center">
                             <div class="img-box">
-                                <img src="./images/eugene.jpeg" width="200px" class="img-responsive">
+                                <img src="./assets/images/eugene.jpeg" width="200px" class="img-responsive">
                                 <ul>
                                <a href="https://github.com/eugeneisingizwe"><li><i class="fa-brands fa-github"></i></li></a> 
                                <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
