added antonio image

--- a/contrib.html
+++ b/contrib.html
@@ -42,7 +42,7 @@
 
                     <div class="col-md-3 profile text-center">
                         <div class="img-box">
-                            <img src="./assets/images/antonio.jpeg" width="200px" class="img-responsive">
+                            <img src="./assets/images/antonio.jpg" width="200px" class="img-responsive">
                             <ul>
                            <a href="https://github.com/antonio11duran"><li><i class="fa-brands fa-github"></i></li></a> 
                            <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a>
