fixed image size bug and fixed position of header

--- a/contrib.html
+++ b/contrib.html
@@ -10,14 +10,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
+<!--Header for contrib page-->
     <section class="team">
         <div class="container">
             <h1><span>OUR TEAM</span></h1>
         </div>
+<!--Columns for each teammate with image-->
             <div class="columns">
             <div class="profile column is-3 has-text-centered">
                 <div class="img-box">
-                    <img src="./assets/images/rob.JPG" width="300px">
+                    <img src="./assets/images/rob.JPG">
                     <ul>
                    <a href="https://github.com/rarellano5280"><li><i class="fa-brands fa-github"></i></li></a> 
                    <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
@@ -29,7 +31,7 @@
                 </div>
             <div class="profile column is-3 has-text-centered">
                 <div class="img-box">
-                    <img src="./assets/images/madisen.jpeg" width="300px">
+                    <img src="./assets/images/madisen.jpeg">
                      <ul>
                     <a href="https://github.com/madisenvo"><li><i class="fa-brands fa-github"></i></li></a> 
                     <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
@@ -42,7 +44,7 @@
 
                     <div class="profile column is-3 has-text-centered">
                         <div class="img-box">
-                            <img src="./assets/images/antonio.jpg" width="300px">
+                            <img src="./assets/images/antonio.jpg">
                             <ul>
                            <a href="https://github.com/antonio11duran"><li><i class="fa-brands fa-github"></i></li></a> 
                            <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a>
