added my bio to contrib page

--- a/contrib.html
+++ b/contrib.html
@@ -27,7 +27,7 @@
                     </ul>
                 </div>
                 <h2>Robert Arellano</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum elit eros</p>
+                <p>Robert is an aspiring front end software developer from Denver Colorado. He takes every challenge as an opportunity to learn and grow his foundational skills. </p>
                 </div>
             <div class="profile column is-3 has-text-centered">
                 <div class="img-box">
