added comments for html contrib

--- a/contrib.html
+++ b/contrib.html
@@ -15,11 +15,12 @@
         <div class="container">
             <h1><span>OUR TEAM</span></h1>
         </div>
-<!--Columns for each teammate with image-->
+<!--Columns for each teammate with images-->
             <div class="columns">
             <div class="profile column is-3 has-text-centered">
                 <div class="img-box">
                     <img src="./assets/images/rob.JPG">
+<!--Ul for external links-->
                     <ul>
                    <a href="https://github.com/rarellano5280"><li><i class="fa-brands fa-github"></i></li></a> 
                    <a href="#"><li><i class="fa-brands fa-linkedin"></i></li></a> 
@@ -68,7 +69,6 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum elit eros</p>
                             </div>
                         </div>
-
         </div>
     </section>
     
