fixed https raphael link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/us-map/1.0.1/jquery.usmap.min.js"
         integrity="sha512-84K7p/J13bQ9cZo5jQ0XtGHfq8csnRl3gb19glfw+ZGuCTFcspY7OVuywjuYSI9NBGsbdyPaVUW1opr+FhR+nw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
