--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <!-- park data - visible when map is clicked - nested columns formatted with bulma -->
         <div id="data" class="hide">
-            <div  class="columns is-multiline is-fullwidth is-full-mobile"> 
+            <div  class="columns is-fullwidth is-full-mobile"> 
                 <div id="parkdata" class="column is-4 has-text-centered is-full-mobile"></div>
                 <div>
                     <div id="forecast-container" class ="column is-12 has-text-centered is-offset-1"></div> 
